[package]
name = "radsort"
description = "Radix sort implementation for sorting by scalar keys (integers, floats, chars, bools)"
repository = "https://github.com/jakubvaltar/radsort"
version = "0.1.0"
authors = ["Jakub Valtar <jakub.valtar@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/radsort"
homepage = "https://github.com/JakubValtar/radsort"
categories = ["algorithms", "no-std"]
keywords = ["sorting", "sort", "radix", "counting"]
readme = "README.md"
rust-version = "1.60.0"

[dependencies]
